fix hamburger menu overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -61,8 +61,12 @@ body {
   0% {
     left: 0;
   }
-  100% {
+  99% {
     left: 300px;
+  }
+  100%{
+    left: 300px;
+    display: none;
   }
 }
 .hamburger {
@@ -98,11 +102,18 @@ body {
     padding-left: 0;
     box-sizing: border-box;
   }
-  100% {
+  99% {
     left: -300px;
     margin-left: 0;
     box-sizing: content-box;
     background-color: white;
+  }
+  100%{
+    left: -300px;
+    margin-left: 0;
+    box-sizing: content-box;
+    background-color: white;
+    display: none;
   }
 }
 @keyframes burger {
